tests/error/mod_by_zero_in_static_if.c
// fail "Mod with zero."


// This used to crash.
#if 1 % UNDEFINED

